--- a/backend/api/v1/package.json
+++ b/backend/api/v1/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bull": "^4.10.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
