--- a/backend/api/v1/package.json
+++ b/backend/api/v1/package.json
@@ -17,16 +17,20 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.4",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^5.7.0",
     "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "redis": "^4.6.7",
     "validator": "^13.9.0"
   },
   "devDependencies": {
