--- a/backend/api/v1/package.json
+++ b/backend/api/v1/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "redis": "^4.6.7",
+    "speakeasy": "^2.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
