--- a/Latent-FrontEnd/package.json
+++ b/Latent-FrontEnd/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react": "^18.2.0",
