--- a/Latent-FrontEnd/package.json
+++ b/Latent-FrontEnd/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.14.1",
     "react-router-dom": "^6.3.0",
     "swiper": "^10.0.0"
   },
