--- a/backend/api/v1/package.json
+++ b/backend/api/v1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "test": "./node_modules/.bin/mocha --require test/hooks.js",
+    "test": "./node_modules/.bin/mocha --require test/hooks.js --exit",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
