--- a/Latent-FrontEnd/package.json
+++ b/Latent-FrontEnd/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.1.3",
     "swiper": "^10.0.0"
   },
   "devDependencies": {
