--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "./start.sh",
     "b-dev": "nodemon ./backend/api/v1/server.js",
     "f-dev": "cd Latent-FrontEnd && vite",
-    "build": "./vite_build.sh",
+    "//build": "./vite_build.sh",
     "preview": "cd Latent-FrontEnd && vite preview"
   },
   "//frontend-scripts": {
@@ -55,7 +55,11 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.1.3",
-    "swiper": "^10.0.0"
+    "swiper": "^10.0.0",
+    "vite": "^2.9.9",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3",
+    "@vitejs/plugin-react": "^1.3.0"
   },
   "//frontend-dependencies": {
     "@react-google-maps/api": "^2.18.1",
@@ -71,7 +75,7 @@
     "react-toastify": "^9.1.3",
     "swiper": "^10.0.0"
   },
-  "devDependencies": {
+  "//devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
@@ -83,16 +87,16 @@
     "sinon": "^7.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "vite": "^2.9.9"
+    "//postcss": "^8.4.14",
+    "//vite": "^2.9.9",
+    "//tailwindcss": "^3.1.3",
+    "//@vitejs/plugin-react": "^1.3.0"
   },
   "//frontend-devDependencies": {
     "@types/react": "^18.0.0",
