--- a/package.json
+++ b/package.json
@@ -58,10 +58,13 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.1.3",
     "swiper": "^10.0.0",
-    "vite": "^2.9.9",
+    "vite": "~2.7.1",
+    "@vitejs/plugin-react": "^1.3.0",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "@vitejs/plugin-react": "^1.3.0"
+    "tailwindcss": "^3.1.3"
+  },
+  "resolutions": {
+    "esbuild": "0.14.34"
   },
   "//frontend-dependencies": {
     "@react-google-maps/api": "^2.18.1",
@@ -96,7 +99,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "//postcss": "^8.4.14",
-    "//vite": "^2.9.9",
+    "//vite": "^2.9.9 TESTING 2.7.1",
     "//tailwindcss": "^3.1.3",
     "//@vitejs/plugin-react": "^1.3.0"
   },
