--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vite": "~2.7.1",
     "@vitejs/plugin-react": "^1.3.0",
     "postcss": "^8.4.14",
+    "autoprefixer": "^10.4.7",
     "tailwindcss": "^3.1.3"
   },
   "resolutions": {
@@ -101,6 +102,7 @@
     "//postcss": "^8.4.14",
     "//vite": "^2.9.9 TESTING 2.7.1",
     "//tailwindcss": "^3.1.3",
+    "//autoprefixer": "^10.4.7",
     "//@vitejs/plugin-react": "^1.3.0"
   },
   "//frontend-devDependencies": {
